@@ -64,6 +64,7 @@ TODO: URxvt::Ext::Name installs urxvt ext name and provides pod/manpage for URxv
 	  to a key combination.
 	- a key combination bound to 'matcher:select' can now be used
 	  to cycle through the matches in matcher.
+        - change perl integer accessors (->width et al.) into mutators.
 
 9.21 Wed Dec 31 14:50:03 CET 2014
 	- the "moa redraw 8-bit british vintage colour management" release.
